fixed top margin for about page on mobile

--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -24,7 +24,7 @@
   }
 
   @media only screen and (max-width: $bp-sm) {
-    margin-top: 10rem;
+    margin-top: 7rem;
   }
 }
 
