--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1170,7 +1170,7 @@ main {
       margin-top: 5rem; } }
   @media only screen and (max-width: 37.5em) {
     .about-wrapper {
-      margin-top: 10rem; } }
+      margin-top: 7rem; } }
 
 .bio {
   width: 100%;
